--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -183,7 +183,7 @@ a {
 }
 
 a:hover {
-    color: #0056b3;
+    color: #ffffff;
     text-decoration: underline;
 }
 
@@ -517,8 +517,8 @@ mark,
 
 .img-thumbnail {
     padding: 0.25rem;
-    background-color: #fff;
-    border: 1px solid #dee2e6;
+    background-color: rgb(0, 0, 0);
+    border: 1px solid #000000;
     border-radius: 0.25rem;
     max-width: 100%;
     height: auto;
@@ -4668,12 +4668,12 @@ input[type="button"].btn-block {
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(255, 255, 255, 0.87);
 }
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link:focus {
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(255, 0, 0, 0.7);
 }
 
 .navbar-light .navbar-nav .nav-link.disabled {
@@ -4768,7 +4768,7 @@ input[type="button"].btn-block {
     flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
