--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,15 +1,55 @@
-.gallery_product {
-    margin-bottom: 30px;
-}
-
-.gallery_product .title {
-    color: rgb(255, 251, 0);
-    margin: 0;
-    position: relative;
-    bottom: 50px;
-    left: 10px;
-}
-
-.gallery_product .title small {
-    display: block;
-}
+                body {
+                    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, 0.404);
+                    background-color: #262a2eb9;
+                }
+                
+                .card-text {
+                    color: rgb(255, 255, 255);
+                }
+                
+                .rodape {
+                    padding: 2.5rem 0;
+                    color: #999;
+                    background-color: #000000;
+                    border-top: .05rem solid #e5e5e5;
+                }
+                
+                .rodape {
+                    margin-bottom: 0;
+                }
+                
+                .zoom {
+                    overflow: hidden;
+                }
+                
+                .zoom img {
+                    max-width: 100%;
+                    -moz-transition: all 0.3s;
+                    -webkit-transition: all 0.3s;
+                    transition: all 0.3s;
+                }
+                
+                .zoom:hover img {
+                    -moz-transform: scale(1.1);
+                    -webkit-transform: scale(1.1);
+                    transform: scale(1.1);
+                }
+                
+                .titulo {
+                    font-style: italic;
+                    font-weight: bold;
+                }
+                
+                .navbar {
+                    box-shadow: 0 .05rem .8rem rgba(0, 0, 0, 0.712);
+                }
+                
+                .legenda {
+                    position: relative;
+                    top: 10px;
+                    font-weight: bold;
+                }
+                
+                .ajuste {
+                    height: 245px;
+                }
